Closed Bug 887093 Opened 11 years ago Closed 11 years ago

[MMS] view attach image in text field will crash

Categories

(Core :: DOM: Core & HTML, defect)

ARM
Gonk (Firefox OS)
defect
Not set
critical

Tracking

()

VERIFIED FIXED
1.1 QE4 (15jul)
blocking-b2g leo+
Tracking Status
firefox25 --- unaffected
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- wontfix
b2g-v1.1hd --- fixed

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

References

Details

(Keywords: crash, Whiteboard: [b2g-crash] [TD-42216] leorun3)

Attachments

(2 files)

Attached patch Patch, v1Splinter Review
+++ This bug was initially created as a clone of Bug #877482 +++ Platform fix. Not sure if we want to block leo on this or not given that we have a gaia workaround. We need this in the platform regardless though.
Attachment #767545 - Flags: review?(khuey)
I've tested your patch on v1-train and it fixes all related bugs: bug 880825, bug 886772, bug 886773 and bug 877482 once the gaia workaround is removed - see attachment 767587 [details] [diff] [review]. If you think this can land this week I'll push for it to be leo+'d; I very much prefer this than landing three distinct workarounds in Gaia.
blocking-b2g: leo? → leo+
Blocks: 880825
khuey, what's your timeline for review here? Please see comment 2.
Flags: needinfo?(khuey)
Dude you requested review on this 4 hours ago ...
Flags: needinfo?(khuey)
(In reply to Kyle Huey [:khuey] (khuey@mozilla.com) from comment #4) > Dude you requested review on this 4 hours ago ... Not trying to rush, just wanted to know if you think you can do it this week or if we should go with the other patch, like Gabriele is asking in comment 2.
Blocks: 868225
We can review this in the office tomorrow.
This doesn't apply to birch/m-c at all.
Keywords: checkin-needed
(In reply to Ryan VanderMeulen [:RyanVM UTC-4][PTO 6/27-6/30] from comment #7) > This doesn't apply to birch/m-c at all. Oops! Sorry, this is a b2g18-only patch.
Keywords: checkin-needed
Blocks: 884722
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Status: ASSIGNED → RESOLVED
Closed: 11 years ago11 years ago
Resolution: --- → FIXED
No longer blocks: gaia-euro-sprint-6
Verified by pvt build 20130715230201 Issue is solved successfully without crash.
Status: RESOLVED → VERIFIED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: