Bug 887093 - [MMS] view attach image in text field will crash. r=khuey, a=leo+