dom/ipc/ContentParent.cpp
@@ -1634,6 +1634,19 @@ ContentParent::GetParamsForBlob(nsDOMFileBase* aBlob,
     resultParams = MysteryBlobConstructorParams();
   }
   else {
+    nsCOMPtr<nsIRemoteBlob> remoteBlob;
+    CallQueryInterface(static_cast<nsIDOMBlob*>(aBlob),
+                       getter_AddRefs(remoteBlob));
+    if (remoteBlob) {
+      BlobParent* actor =
+        static_cast<BlobParent*>(
+          static_cast<PBlobParent*>(remoteBlob->GetPBlob()));
+      if (actor && actor->ManagerIs(this)) {
+        *aOutParams = BlobConstructorNoMultipartParams(actor);
+        return true;
+      }
+    }
+
     BlobOrFileConstructorParams params;
 
     nsString contentType;
@@ -1694,7 +1707,6 @@ ContentParent::GetParamsForBlob(nsDOMFileBase* aBlob,
   }
 
   *aOutParams = resultParams;
-
   return true;
 }
 
@@ -1721,9 +1733,7 @@ ContentParent::GetOrCreateActorForBlob(nsIDOMBlob* aBlob)
     BlobParent* actor =
       static_cast<BlobParent*>(
         static_cast<PBlobParent*>(remoteBlob->GetPBlob()));
-    NS_ASSERTION(actor, "Null actor?!");
-
-    if (actor->ManagerIs(this)) {
+    if (actor && actor->ManagerIs(this)) {
       return actor;
     }
   }
